--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--css-->
+    <link rel="stylesheet" href="./css/style.css">
     <title>Simon Says</title>
 </head>
 <body>
+
+    <!--start main-->
+    <main>
+        <div id="number_random_one"></div>
+        <div id="number_random_two"></div>
+        <div id="number_random_three"></div>
+        <div id="number_random_four"></div>
+        <div id="number_random_five"></div>
+    </main>
+    <!--end main-->
+
+    <!--js-->
+    <script type="text/javascript" src="./js/script.js"></script>
     
 </body>
 </html>
