--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <!--start main-->
     <main>
-        <div id="number_random_one"></div>
-        <div id="number_random_two"></div>
-        <div id="number_random_three"></div>
-        <div id="number_random_four"></div>
-        <div id="number_random_five"></div>
+        <div id="random_number_one"></div>
+        <div id="random_number_two"></div>
+        <div id="random_number_three"></div>
+        <div id="random_number_four"></div>
+        <div id="random_number_five"></div>
     </main>
     <!--end main-->
 
