[UPDATE] insert header end title

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 <body>
 
+    <!--start header-->
+    <header>
+        <h1>Ciao, Benvenuto! Questo è un Gioco MNEMONICO.</h1>
+        <h2>Hai 30 secondi per memorizzare questi 5 numeri, occhio al timer che scorre!</h2>
+    </header>
+    <!--end header-->
+
     <!--start main-->
     <main>
         <div id="random_number_one"></div>
