[UPDATE] insert if control results

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         <div id="random_number_three"></div>
         <div id="random_number_four"></div>
         <div id="random_number_five"></div>
+        <h2 id="results_one"></h2>
+        <h2 id="results_two"></h2>
+        <h2 id="results_three"></h2>
+        <h2 id="results_four"></h2>
+        <h2 id="results_five"></h2>
     </main>
     <!--end main-->
 
