--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
         <div id="random_number_three"></div>
         <div id="random_number_four"></div>
         <div id="random_number_five"></div>
-        <h2 id="results_one"></h2>
-        <h2 id="results_two"></h2>
-        <h2 id="results_three"></h2>
-        <h2 id="results_four"></h2>
-        <h2 id="results_five"></h2>
+        <div>
+            <h5 id="results_one"></h5>
+            <h5 id="results_two"></h5>
+            <h5 id="results_three"></h5>
+            <h5 id="results_four"></h5>
+            <h5 id="results_five"></h5>
+        </div>
     </main>
     <!--end main-->
 
