[UPDATE] esercize done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--start header-->
     <header>
         <h1>Ciao, Benvenuto! Questo è un Gioco MNEMONICO.</h1>
-        <h2>Hai 30 secondi per memorizzare questi 5 numeri, occhio al timer che scorre!</h2>
+        <h2>Hai 30 secondi per memorizzare questi 5 numeri, occhio al tempo che scorre!</h2>
     </header>
     <!--end header-->
 
@@ -30,10 +30,17 @@
             <h5 id="results_three"></h5>
             <h5 id="results_four"></h5>
             <h5 id="results_five"></h5>
+            <h5 id="results"></h5>
         </div>
     </main>
     <!--end main-->
 
+    <!--start footer-->
+    <footer>
+        <h2>Per riavviare il gioco aggiorna la pagina.</h2>
+    </footer>
+    <!--end footer-->
+    
     <!--js-->
     <script type="text/javascript" src="./js/script.js"></script>
     
