[UPDATE] optimize code

--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
 
     <!--start main-->
     <main>
+        <div id="random"></div>
+        <!-- (superato)
         <div id="random_number_one"></div>
         <div id="random_number_two"></div>
         <div id="random_number_three"></div>
         <div id="random_number_four"></div>
         <div id="random_number_five"></div>
         <div>
+        -->
             <h5 id="results_one"></h5>
             <h5 id="results_two"></h5>
             <h5 id="results_three"></h5>
