[UPDATE] optimize code

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div id="random_number_five"></div>
         <div>
         -->
+        <div>
             <h5 id="results_one"></h5>
             <h5 id="results_two"></h5>
             <h5 id="results_three"></h5>
